<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ketcham_Josh_Lab1_BroadcastReceiver_Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_Name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="age">Age</string>
    <string name="enter_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="add_button">Add Person</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>
