<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fullsail.jketch.ketcham_josh_lab1_broadcastreceiver_project.Fragment.DetailsFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:gravity="center">

            <EditText
                android:id="@+id/detailFirstNameField"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_Name"/>


            <EditText
                android:id="@+id/detailLastNameField"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_Name"/>

            <EditText
                android:id="@+id/detailAgeField"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"/>

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:gravity="center"/>

    </LinearLayout>

</FrameLayout>
